--- a/package.json
+++ b/package.json
@@ -10,29 +10,40 @@
     "npm": ">=8.0.0"
   },
   "scripts": {
-    "start": "lerna run --parallel start"
+    "start": "lerna run --parallel start",
+    "lint": "eslint .",
+    "prettier": "prettier --write .",
+    "build": "lerna run --parallel build",
+    "preview": "lerna run --parallel serve"
   },
   "author": "Abdul Rehan",
   "license": "MIT",
   "description": "Whisper is a full-stack chatting application that helps locals connect and share their thoughts. It offers an easy way for users to interact and exchange ideas within their community.",
   "dependencies": {
+    "express": "^4.21.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.11.1",
     "@types/express": "^5.0.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.1",
     "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
-    "express": "^4.21.0",
     "globals": "^15.9.0",
+    "husky": "^7.0.4",
     "lerna": "^8.1.8",
     "nodemon": "^3.1.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.7.0",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.8.0",
     "vite": "^5.4.8"
   }
 }
