--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "serve": "vite preview",
+    "build": "vite build"
   }
 }
