--- a/package.json
+++ b/package.json
@@ -20,24 +20,31 @@
   "license": "MIT",
   "description": "Whisper is a full-stack chatting application that helps locals connect and share their thoughts. It offers an easy way for users to interact and exchange ideas within their community.",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "remove": "^0.1.5",
-    "uninstall": "^0.0.0"
+    "uninstall": "^0.0.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.11.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/validator": "^13.12.2",
     "@vitejs/plugin-react-swc": "^3.7.1",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.1",
