--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -124,7 +124,10 @@
         "no-useless-concat": "error",
         "no-useless-return": "error",
         "no-constant-condition": "warn",
-        "no-unused-vars": ["warn", { "argsIgnorePattern": "req|res|next|__" }],
+        "no-unused-vars": [
+          1,
+          { "args": "after-used", "argsIgnorePattern": "^_" }
+        ],
         //* Enhance Readability
         "indent": ["error", 2, { "SwitchCase": 1 }],
         "no-mixed-spaces-and-tabs": "warn",
