--- a/package.json
+++ b/package.json
@@ -26,11 +26,8 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "morgan": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "remove": "^0.1.5",
-    "uninstall": "^0.0.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
@@ -54,11 +51,13 @@
     "globals": "^15.9.0",
     "husky": "^7.0.4",
     "lerna": "^8.1.8",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.8.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "winston": "^3.15.0"
   }
 }
