--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -124,8 +124,7 @@
         "no-useless-concat": "error",
         "no-useless-return": "error",
         "no-constant-condition": "warn",
-        "no-unused-vars": "off",
-        "@typescript-eslint/no-unused-vars": [
+        "no-unused-vars": [
           1,
           {
             "args": "after-used",
