--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   "license": "MIT",
   "description": "Whisper is a full-stack chatting application that helps locals connect and share their thoughts. It offers an easy way for users to interact and exchange ideas within their community.",
   "dependencies": {
+    "@apollo/server": "^4.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.21.0",
+    "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
+    "nodemailer": "^6.9.15",
+    "otp-generator": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "validator": "^13.12.0"
@@ -39,6 +43,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/validator": "^13.12.2",
