--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "mongoose": "^8.7.0",
     "nodemailer": "^6.9.15",
     "otp-generator": "^4.0.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "validator": "^13.12.0"
@@ -42,6 +44,8 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/nodemailer": "^6.4.16",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth2": "^0.1.10",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/validator": "^13.12.2",
