--- a/package.json
+++ b/package.json
@@ -21,24 +21,24 @@
   "description": "Whisper is a full-stack chatting application that helps locals connect and share their thoughts. It offers an easy way for users to interact and exchange ideas within their community.",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "nodemailer": "^6.9.15",
-    "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "validator": "^13.12.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.11.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
@@ -57,6 +57,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "husky": "^7.0.4",
+    "ioredis": "^5.4.1",
     "lerna": "^8.1.8",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
@@ -64,6 +65,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.8.0",
+    "validator": "^13.12.0",
     "vite": "^5.4.8",
     "winston": "^3.15.0"
   }
